Remove documentation for admin functions
