# app/Http/Controllers/V1/ImageController.php
@@ -35,82 +35,12 @@ class ImageController extends BaseController
         return Responder::result(['pagination' => $images]);
     }
 
-    /**
-     * @OA\Get(
-     *      tags={"Image"},
-     *      path="/images/{id}/show",
-     *      summary="Return a specific image",
-     *      description="",
-     *
-     * @OA\Response(
-     *         response="default",
-     *         description="Return a specific image"
-     *     ),
-     *
-     *     )
-     *
-     */
     function show(ShowImageRequest $request)
     {
         $item = Image::find(request('id'));
         return Responder::result(['item' => $item]);
     }
 
-    /**
-     * @OA\Post(
-     *      tags={"Image"},
-     *      path="/images/add",
-     *      summary="Add an image",
-     *      description="",
-     *
-     * @OA\Response(
-     *         response="default",
-     *         description="successful operation"
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="remote_id",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="name",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="min_disk",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="min_ram",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     )
-     *
-     */
     function add(AddImageRequest $request)
     {
         Image::create([
@@ -124,71 +54,6 @@ class ImageController extends BaseController
         return Responder::success("تصویر با موفقیت اضافه شد");
     }
 
-    /**
-     * @OA\Post(
-     *      tags={"Image"},
-     *      path="/images/{id}/edit",
-     *      summary="Edit an image using its id",
-     *      description="",
-     *
-     * @OA\Response(
-     *         response="default",
-     *         description="successful operation"
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="remote_id",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="name",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="min_disk",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="min_ram",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     )
-     *
-     */
     function edit(EditImageRequest $request)
     {
         Image::find(\request('id'))->update([
@@ -202,31 +67,6 @@ class ImageController extends BaseController
         return Responder::success("تصویر با موفقیت ویرایش شد");
     }
 
-    /**
-     * @OA\Delete(
-     *      tags={"Image"},
-     *      path="/images/{id}/remove",
-     *      summary="Remove an image using its id",
-     *      description="",
-     *
-     * @OA\Response(
-     *         response="default",
-     *         description="successful operation"
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     )
-     *
-     */
     function remove(RemoveImageRequest $request)
     {
         Image::destroy(\request('id'));
