# app/Http/Controllers/V1/PlanController.php
@@ -35,102 +35,12 @@ class PlanController extends BaseController
         return Responder::result(['pagination' => $plans]);
     }
 
-    /**
-     * @OA\Get(
-     *      tags={"Plan"},
-     *      path="/plans/{id}/show",
-     *      summary="Return a specific plan",
-     *      description="",
-     *
-     * @OA\Response(
-     *         response="default",
-     *         description="Return a specific plan"
-     *     ),
-     *
-     *     )
-     *
-     */
     function show(ShowPlanRequest $request)
     {
         $item = Plan::find(request('id'));
         return Responder::result(['item' => $item]);
     }
 
-    /**
-     * @OA\Post(
-     *      tags={"Plan"},
-     *      path="/plans/add",
-     *      summary="Add a plan",
-     *      description="",
-     *
-     * @OA\Response(
-     *         response="default",
-     *         description="successful operation"
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="remote_id",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="name",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="disk",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="ram",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="vcpu",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="hourly_price",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     )
-     *
-     */
     function add(AddPlanRequest $request)
     {
         Plan::create([
@@ -145,91 +55,6 @@ class PlanController extends BaseController
         return Responder::success("پلن با موفقیت اضافه شد");
     }
 
-    /**
-     * @OA\Post(
-     *      tags={"Plan"},
-     *      path="/plans/{id}/edit",
-     *      summary="Edit a plan using its id",
-     *      description="",
-     *
-     * @OA\Response(
-     *         response="default",
-     *         description="successful operation"
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="remote_id",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="name",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="disk",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="ram",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="vcpu",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="hourly_price",
-     *         in="query",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="number"
-     *         )
-     *     ),
-     *
-     *     )
-     *
-     */
     function edit(EditPlanRequest $request)
     {
         Plan::find(\request('id'))->update([
@@ -244,31 +69,6 @@ class PlanController extends BaseController
         return Responder::success("پلن با موفقیت ویرایش شد");
     }
 
-    /**
-     * @OA\Delete(
-     *      tags={"Plan"},
-     *      path="/plans/{id}/remove",
-     *      summary="Remove a plan using its id",
-     *      description="",
-     *
-     * @OA\Response(
-     *         response="default",
-     *         description="successful operation"
-     *     ),
-     *
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         description="",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *
-     *     )
-     *
-     */
     function remove(RemovePlanRequest $request)
     {
         Plan::destroy(\request('id'));
