# storage/api-docs/api-docs.json
@@ -274,162 +274,6 @@
                 }
             }
         },
-        "/images/{id}/show": {
-            "get": {
-                "tags": [
-                    "Image"
-                ],
-                "summary": "Return a specific image",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\ImageController::show",
-                "responses": {
-                    "default": {
-                        "description": "Return a specific image"
-                    }
-                }
-            }
-        },
-        "/images/add": {
-            "post": {
-                "tags": [
-                    "Image"
-                ],
-                "summary": "Add an image",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\ImageController::add",
-                "parameters": [
-                    {
-                        "name": "remote_id",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "min_disk",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "name": "min_ram",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
-        "/images/{id}/edit": {
-            "post": {
-                "tags": [
-                    "Image"
-                ],
-                "summary": "Edit an image using its id",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\ImageController::edit",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "remote_id",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "min_disk",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "name": "min_ram",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
-        "/images/{id}/remove": {
-            "delete": {
-                "tags": [
-                    "Image"
-                ],
-                "summary": "Remove an image using its id",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\ImageController::remove",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
         "/limits/list": {
             "get": {
                 "tags": [
@@ -954,198 +798,6 @@
                 "responses": {
                     "default": {
                         "description": "List of plans"
-                    }
-                }
-            }
-        },
-        "/plans/{id}/show": {
-            "get": {
-                "tags": [
-                    "Plan"
-                ],
-                "summary": "Return a specific plan",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\PlanController::show",
-                "responses": {
-                    "default": {
-                        "description": "Return a specific plan"
-                    }
-                }
-            }
-        },
-        "/plans/add": {
-            "post": {
-                "tags": [
-                    "Plan"
-                ],
-                "summary": "Add a plan",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\PlanController::add",
-                "parameters": [
-                    {
-                        "name": "remote_id",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "disk",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "name": "ram",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "name": "vcpu",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "name": "hourly_price",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
-        "/plans/{id}/edit": {
-            "post": {
-                "tags": [
-                    "Plan"
-                ],
-                "summary": "Edit a plan using its id",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\PlanController::edit",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "remote_id",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "disk",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "name": "ram",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "name": "vcpu",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "name": "hourly_price",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
-        "/plans/{id}/remove": {
-            "delete": {
-                "tags": [
-                    "Plan"
-                ],
-                "summary": "Remove a plan using its id",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\PlanController::remove",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
                     }
                 }
             }
@@ -2066,149 +1718,6 @@
                         "required": true,
                         "schema": {
                             "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
-        "/users/list": {
-            "get": {
-                "tags": [
-                    "User"
-                ],
-                "summary": "List all users",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\UserController::index",
-                "responses": {
-                    "default": {
-                        "description": "List of users"
-                    }
-                }
-            }
-        },
-        "/users/{id}/show": {
-            "get": {
-                "tags": [
-                    "User"
-                ],
-                "summary": "Return a specific user",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\UserController::show",
-                "responses": {
-                    "default": {
-                        "description": "Return a specific user"
-                    }
-                }
-            }
-        },
-        "/users/add": {
-            "post": {
-                "tags": [
-                    "User"
-                ],
-                "summary": "Add a user",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\UserController::add",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
-        "/users/{id}/remove": {
-            "delete": {
-                "tags": [
-                    "User"
-                ],
-                "summary": "Remove a user using its id",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\UserController::remove",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
-        "/users/{id}/activate": {
-            "put": {
-                "tags": [
-                    "User"
-                ],
-                "summary": "Activates a user",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\UserController::activate",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
-        "/users/{id}/deactivate": {
-            "put": {
-                "tags": [
-                    "User"
-                ],
-                "summary": "Deactivate a user",
-                "description": "",
-                "operationId": "App\\Http\\Controllers\\V1\\UserController::deactivate",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 ],
